--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^4.0.3
   lottie: ^2.3.2
   audioplayers: ^4.0.1
+  awesome_snackbar_content: ^0.1.3
 
 dev_dependencies:
   flutter_test:
